# hf_to_rlds

./: .gitignore  README.md  __init__.py  dataset_explorer.py  pyproject.toml
lib/: __init__.py  config.py  converter.py  fk_converter.py  tfrecord_writer.py  video_loader.py
scripts/: __init__.py  convert.py  download_and_convert.py
test_data/lerobot/data/chunk-000/: file-000.parquet
test_data/lerobot/meta/: info.json  tasks.parquet
tests/: __init__.py  test_conversion.py
